fixed empty gap in search page

--- a/src/styles/PageContent.module.css
+++ b/src/styles/PageContent.module.css
@@ -2,7 +2,6 @@
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-  min-height: 100vh;
   height: max-content;
   margin-top: 6rem;
 }
